# genie-claw

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODEBASE.md  CONNECTIVITY.md  Cargo.toml  GETTING_STARTED.md  LOW_LATENCY_HOME_AGENT.md  Makefile  README.md  VECTOR_MEMORY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  voice_pipeline.yml
.github/workflows/: auto-label.yml
crates/genie-api/src/: routes.rs
crates/genie-common/src/: config.rs
crates/genie-core/: Cargo.toml
crates/genie-core/src/: agent_harness.rs  conversation.rs  lib.rs  main.rs  runtime_boundary.rs  server.rs  telegram.rs  voice_loop.rs
crates/genie-core/src/connectivity/: mod.rs
crates/genie-core/src/eval/: bfcl.rs
crates/genie-core/src/llm/: genie_ai_runtime.rs  llama_cpp.rs  mock.rs  mod.rs  openai_compat.rs  privacy_proxy.rs  provider.rs
crates/genie-core/src/memory/: embedding.rs  extract.rs  inject.rs  mod.rs  policy.rs  recall.rs
crates/genie-core/src/security/: injection.rs  sandbox.rs
crates/genie-core/src/skills/: loader.rs
crates/genie-core/src/tools/: actuation.rs  calc.rs  calc_input.rs  dispatch.rs  mod.rs  parser.rs  quick.rs
crates/genie-core/src/voice/: format.rs  mod.rs  noise.rs  pipeline.rs  stt.rs  tts.rs
crates/genie-core/tests/: calc_input_test.rs  injection_bench.rs  injection_test.rs  tool_dispatch_test.rs  tool_gate_integration_test.rs  voice_format_bench.rs  voice_format_test.rs  voice_input_bench.rs  voice_loop_integration.rs
crates/genie-ctl/src/: bfcl_import.rs  main.rs
crates/genie-governor/src/: governor.rs
crates/genie-health/src/: checker.rs
deploy/: setup-jetson.sh
deploy/config/: geniepod.dev.toml  geniepod.toml
deploy/scripts/: detect-audio-device.sh  genie-audio-init  start_all.sh
deploy/systemd/: genie-ai-runtime.service  genie-core.service
doc/: README.md  configuration.md  core-subsystems.md  deployment-and-ops.md  household-security.md  http-and-cli.md  implementation-status.md  lyrat-jetson-audio.md  milestone-1-portable-home-agent.md  overview.md  repo-map.md  services-and-crates.md
doc/workflow/: prompt.md
tests/bfcl/: README.md  home_tool_cases.jsonl  home_tool_predictions.jsonl
