[workspace]
resolver = "2"
members = [
    "crates/genie-common",
    "crates/genie-core",
    "crates/genie-ctl",
    "crates/genie-governor",
    "crates/genie-health",
    "crates/genie-api",
    "crates/genie-skill-sdk",
    "skills/hello-world",
]

[workspace.package]
version = "1.0.0-rc.2"
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/GeniePod/genie-claw"

[workspace.dependencies]
tokio = { version = "1", features = ["rt", "macros", "signal", "time", "process", "io-util", "io-std", "fs", "net", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
libc = "0.2"
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
webpki-roots = "0.26"
zeroize = { version = "1", features = ["derive", "serde"] }

# Workspace crate references
genie-common = { path = "crates/genie-common" }

# Faster local/debug builds: line-tables keep backtraces readable but skip the
# heavy per-variable debuginfo, and dependencies need no debuginfo at all. This
# cuts compile + link time without touching the release (Jetson) build below.
[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

[profile.release]
opt-level = "z"     # Optimize for binary size
lto = true
codegen-units = 1
strip = true
# panic = "abort" was intentionally removed: skill cdylibs rely on catch_unwind
# for fault isolation, and abort strategy silently voids that barrier at runtime.
# Cargo does not allow panic to be overridden per-package, so the workspace must
# use "unwind" (the Rust default) to keep skill fault containment functional.
