[package]
name = "genie-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local home AI runtime for GeniePod Home — prompt engine, tools, memory, voice loop, and local APIs."

[lib]
name = "genie_core"
path = "src/lib.rs"

[[bin]]
name = "genie-core"
path = "src/main.rs"

[features]
default = ["telegram", "llama-cpp", "genie-ai-runtime"]
telegram = []
# LLM backend feature surface (declared per issue #32 closeout).
# Both default-on so today's builds are byte-identical.
# Per-backend `#[cfg]` gating of the modules and constructors will land
# alongside the CI matrix from issue #34, so a `--no-default-features`
# regression is caught automatically rather than silently bit-rotting.
llama-cpp = []
genie-ai-runtime = []

[dependencies]
genie-common = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true }
libc = { workspace = true }
libloading = "0.8"
toml = { workspace = true }
genie-skill-sdk = { path = "../genie-skill-sdk" }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
toml = { workspace = true }
